force-app/main/default/objects/Proposal__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>Unlikely</fullName>
            </value>
            <value>
                <fullName>Hesitant</fullName>
            </value>
            <value>
                <fullName>x</fullName>
            </value>
            <value>
                <fullName>y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>