force-app/main/default/objects/Proposal__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Must tie the Proposal back to an Opportunity that was explored during first contact with the customer.</description>
    <inlineHelpText>Must tie the Proposal back to an Opportunity that was explored during first contact with the customer.</inlineHelpText>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>