force-app/main/default/objects/Proposal__c/fields/Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Status__c</fullName>
    <label>Proposal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Proposal Meeting</fullName>
            </value>
            <value>
                <fullName>Proposal Drafted</fullName>
            </value>
            <value>
                <fullName>Proposal Reviewed</fullName>
            </value>
            <value>
                <fullName>Proposal Approved</fullName>
            </value>
            <value>
                <fullName>Proposal Sent to Client</fullName>
            </value>
            <value>
                <fullName>Proposal Follow-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>