force-app/main/default/objects/Proposal__c/listViews/Full_Detail.listView-meta.xml
<ListView>
    <fullName>Full_Detail</fullName>
    <columns>NAME</columns>
    <columns>Proposal_Status__c</columns>
    <columns>Disposition__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>Full Detail</label>
    <sharedTo>
        <roleAndSubordinates>DepartmentManager</roleAndSubordinates>
        <roleAndSubordinates>Department_User</roleAndSubordinates>
        <roleAndSubordinates>Director</roleAndSubordinates>
    </sharedTo>
</ListView>